# Eon

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
eon_cli/: Cargo.toml  build.rs
eon_cli/src/: main.rs
eon_core/: Cargo.toml
eon_core/src/: addons.rs  assembly.rs  ast.rs  builtin.rs  environment.rs  grammar.pest  host.rs  lib.rs  optimize_bytecode.rs  parse.rs  prelude.rs  statics.rs  translate_bytecode.rs  vm.rs
eon_core/src/statics/: error.rs  pat_exhaustiveness.rs  resolve.rs  typecheck.rs
eon_core/tests/integration/: e2e_bytecode.rs  helper.rs  main.rs  typecheck.rs
examples/: fib_copy.en  file_copy_demo.en  forloop.en  pattern_match_tree.en  random_walk.en  range.en  snake.en
modules/: os.en  random.en  time.en
modules/os/rust_project/: Cargo.toml
modules/os/rust_project/src/: lib.rs  os.rs
modules/os/rust_project/src/os/: env.rs  exec.rs
modules/random/rust_project/: Cargo.toml
modules/random/rust_project/src/: lib.rs  random.rs
modules/term/rust_project/: Cargo.toml  build.rs
modules/term/rust_project/src/: lib.rs  term.rs
modules/time/rust_project/: Cargo.toml
modules/time/rust_project/src/: lib.rs  time.rs
utils/: Cargo.toml
utils/src/: arena.rs  command.rs  hash.rs  id_set.rs  lib.rs  swrite.rs
utils/src/arena/: arena_ref.rs
