[package]
name = "eon_cli"
version = "0.1.0"
authors = ["Aaditya Raj"]
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "eon"
path = "src/main.rs"

[dependencies]
eon_core = { workspace = true, features = ["ffi"] }
clap = { version = "4.5.51", features = ["derive"] }
home = "0.5.12"
libloading = "0.9.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
utils = { workspace = true }

[build-dependencies]
eon_core = { workspace = true, features = ["ffi"] }
