[package]
name = "eon_core"
version = "0.1.0"
authors = ["Aaditya Raj"]
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "eon_core"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
ffi = ["libloading"]

[dependencies]
disjoint-sets = "0.4.2"
libloading = { version = "0.9.0", optional = true }
pest = "2.8.3"
pest_derive = "2.8.3"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
codespan-reporting = "0.13.1"
heck = "0.5.0"
utils = { workspace = true }
